--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -47,15 +47,13 @@ body {
   z-index: -1;
 }
 
-.greenBtn {
-  color: #ACCDA4;
-  background: #3E6335;
+.button {
   display: flex;
   align-items: center;
   justify-content: center;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
 }
-.greenBtn:hover {
+.button:hover {
   transition: 0.3s;
   cursor: pointer;
   filter: brightness(120%);
