--- a/frontend/src/styles/colors.scss
+++ b/frontend/src/styles/colors.scss
@@ -1,4 +1,7 @@
-$dark-brown: #372E28;
+
+// stores the colors used on the application in scss
+
+//$dark-brown: #372E28;
 $solid-brown: #3E342D;
 $soft-brown: #655C56;
 $tan: #BBADA3;
@@ -11,4 +14,4 @@ $light-blue: #A9CEEE;
 
 $solid-grey: #676767;
 $light-grey: #B0B0B0;
-$lighter-grey: #F4F4F4;
+$lightest-grey: #F4F4F4;
