--- a/frontend/src/styles/Home.css
+++ b/frontend/src/styles/Home.css
@@ -24,13 +24,6 @@
   border-radius: 20px;
 }
 
-.morningTxt {
-  color: #372E28;
-  font-size: 80px;
-  margin-top: 50px;
-  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
-}
-
 .modalHolder {
   display: flex;
   justify-content: center;
@@ -38,28 +31,28 @@
   height: 100vh;
 }
 .modalHolder .overlay {
-  margin-top: 80px;
   position: fixed;
   bottom: 0;
   top: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: rgba(0, 0, 0, 0.8);
 }
 .modalHolder .modal {
   background: #F4F4F4;
   width: 600px;
   height: 300px;
-  border: 6px solid #676767;
 }
 .modalHolder .modal .loginTxt {
+  color: #3E342D;
   font-size: 45px;
 }
 .modalHolder .modal .inputs {
-  margin-top: 90px;
+  margin-top: 95px;
   margin-right: 20px;
 }
 .modalHolder .modal .inputs .loginInput label {
+  color: #3E342D;
   text-align: right;
   padding: 5px;
   width: 130px;
@@ -71,15 +64,29 @@
   padding: 5px;
   padding-left: 10px;
   font-size: 20px;
+  border: solid 1.5px #3E342D;
+}
+.modalHolder .modal #error {
+  font-size: 20px;
+  margin-top: 15px;
+  margin-left: 20px;
+  width: 250px;
 }
 .modalHolder .modal .close {
-  color: #676767;
+  color: #3E342D;
   font-size: 35px;
 }
 .modalHolder .modal .close:hover {
   transition: 0.2s;
   cursor: pointer;
-  filter: brightness(60%);
+  filter: opacity(80%);
+}
+
+.morningTxt {
+  color: #3E342D;
+  font-size: 80px;
+  margin-top: 50px;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
 }
 
 .registerBox {
@@ -90,6 +97,7 @@
   margin-top: 50px;
 }
 .registerBox h1 {
+  color: #3E342D;
   font-size: 45px;
   margin-top: 25px;
   margin-left: 80px;
@@ -102,6 +110,7 @@
   margin-right: 90px;
   margin-top: 15px;
   font-size: 15px;
+  color: #3E342D;
 }
 .registerBox .residentCheck input {
   cursor: pointer;
