--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -7,6 +7,17 @@ body {
           user-select: none;
 }
 
+.exit {
+  width: 80px;
+  left: 30px;
+  top: 90px;
+}
+.exit:hover {
+  cursor: pointer;
+  transition: 0.2s;
+  filter: opacity(80%);
+}
+
 .navbar {
   background: #3E342D;
   height: 80px;
@@ -69,10 +80,37 @@ body {
   padding-right: 10px;
   width: 150px;
   text-align: right;
+  color: #3E342D;
 }
 .accountInput input {
   padding: 5px;
   padding-left: 10px;
   width: 400px;
-  border: solid 1px black;
+  border: solid 1.5px #3E342D;
+}
+
+.progBar .title {
+  text-align: center;
+  font-size: 50px;
+  margin-top: 180px;
+  text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
+}
+.progBar .outerContainer {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  width: 1000px;
+  height: 80px;
+  border-radius: 5px;
+  overflow: hidden;
+  background: #F4F4F4;
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+}
+.progBar .outerContainer .innerBar {
+  background: #3E6335;
+  height: 100%;
+  width: 0%;
 }/*# sourceMappingURL=index.css.map */
