--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -6,6 +6,16 @@ body {
     background: $tan;
     user-select: none;
 }
+.exit {
+    width: 80px;
+    left: 30px;
+    top: 90px;
+    &:hover {
+        cursor: pointer;
+        transition: .2s;
+        filter: opacity(80%);
+    }
+}
 
 @mixin txt_hover($bright){
     &:hover {
@@ -64,11 +74,38 @@ body {
         padding-right: 10px;
         width: 150px;
         text-align: right;
+        color: $solid-brown;
     }
     input {
         padding: 5px;
         padding-left: 10px;
         width: 400px;
-        border: solid 1px black;
+        border: solid 1.5px $solid-brown;
+    }
+}
+
+// ProgressBar Component
+.progBar {
+    .title {
+        text-align: center;
+        font-size: 50px;
+        margin-top: 180px;
+        text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
+    }
+    .outerContainer {
+        position: absolute;
+        top: 0; left: 0; right: 0; bottom: 0;
+        margin: auto;
+        width: 1000px;
+        height: 80px;
+        border-radius: 5px;
+        overflow: hidden;
+        background: $lightest-grey;
+        box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+        .innerBar {
+            background: $solid-green;
+            height: 100%;
+            width: 0%;
+        }
     }
 }
