--- a/frontend/src/styles/Mail.scss
+++ b/frontend/src/styles/Mail.scss
@@ -1,5 +1,9 @@
 @import 'colors';
 
+.inter {
+    font-family: 'Inter';
+}
+
 // Setup page
 .mailSetup {
     .setupTitle {
@@ -17,13 +21,13 @@
             padding-bottom: 15px;
         }
         .recipientsContainer {
-            width: 800px;
+            width: 950px;
             height: 550px;
             background: $lightest-grey;
             box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
             overflow-y: scroll;
             .recipientBox {
-                width: 220px;
+                width: 200px;
                 height: 310px;
                 margin-bottom: 20px;
                 background: $light-grey;
@@ -44,6 +48,7 @@
                 }
                 .bottomTxt {
                     font-size: 15px;
+                    line-height: 20px;
                     z-index: 10;
                     background: $light-grey;
                     padding: 5px;
@@ -76,8 +81,15 @@
     }
 }
 
-// Email Editor Page
-.emailEditor {
+// Mail Editor Page
+.mailEditor {
+    .spinner {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        padding-bottom: 150px;
+    }
     .title {
         color: $solid-brown;
         font-size: 40px;
@@ -101,12 +113,19 @@
     }
     .body {
         width: 1400px;
-        height: 520px;
         background: white;
         box-shadow: 0 4px 4px rgba(0, 0, 0, 0.2);
         padding: 15px;
         font-size: 20px;
         resize: none;
+        overflow-y: scroll;
+    }
+    .letterH {
+        font-family: "Times New Roman", Times, serif;
+        height: 545px;
+    }
+    .emailH {
+        height: 520px;
     }
     .infoTxt {
         margin-top: 10px;
@@ -118,5 +137,81 @@
             font-weight: bold;
             color: #15803d;
         }
+    }
+    .infoTxt2 {
+        margin-left: 155px;
+        font-size: 17px;
+        color: $solid-brown;
+        span {
+            font-size: 20px;
+            font-weight: bold;
+            color: #1d4ed8;
+        }
+    }
+}
+
+// Mail Complete Page
+.mailComplete {
+    .sentTxt {
+        color: $solid-brown;
+        font-size: 70px;
+        margin-top: 110px;
+        text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
+    }
+}
+
+// Downloaded Letters Page 
+.downloadedLetters {
+    .title {
+        color: $solid-brown;
+        font-size: 70px;
+        margin-top: 10px;
+    }
+    .minimizedLetters {
+        width: 750px;
+        height: 550px;
+        background: $lightest-grey;
+        box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+        overflow-y: scroll;
+        border: 2px solid $solid-brown;
+    }
+    .bigLetter {
+        width: 850px;
+        height: 550px;
+        background: $lightest-grey;
+        box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+        overflow-y: scroll;
+        border: 2px solid $solid-brown;
+        .letterHolder {
+            margin-top: 15px;
+            margin-left: 25px;
+            font-size: 20px;
+            font-family: 'Times New Roman', Times, serif;
+        }
+    }
+    .txtHolder {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+        i {
+            color: $solid-grey;
+            font-size: 25px;
+            margin-bottom: 40px;
+        }
+    }
+}
+
+// Letter Minimized
+.letterMin {
+    height: 70px;
+    border-bottom: 2px solid $solid-brown;
+    font-size: 20px;
+    padding-top: 5px;
+    padding-left: 10px;
+    &:hover {
+        cursor: pointer;
+        transition: .2s;
+        background: gold !important;
     }
 }
