--- a/frontend/src/styles/Mail.css
+++ b/frontend/src/styles/Mail.css
@@ -206,4 +206,91 @@
   cursor: pointer;
   transition: 0.2s;
   background: gold !important;
+}
+
+.templateModal {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+.templateModal .overlay {
+  position: fixed;
+  bottom: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+}
+.templateModal .modal {
+  background: #F4F4F4;
+  width: 700px;
+  height: 560px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+.templateModal .modal .title {
+  color: #3E342D;
+  font-size: 45px;
+}
+.templateModal .modal .close {
+  color: #3E342D;
+  font-size: 35px;
+}
+.templateModal .modal .close:hover {
+  transition: 0.2s;
+  cursor: pointer;
+  filter: opacity(80%);
+}
+.templateModal .modal .templateBox {
+  width: 200px;
+  height: 200px;
+  background: #B0B0B0;
+  margin-top: 15px;
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+}
+.templateModal .modal .templateBox p {
+  color: #3E342D;
+  font-size: 22px;
+  padding: 10px;
+}
+.templateModal .modal .templateBox:hover {
+  transition: 0.2s;
+  cursor: pointer;
+  filter: brightness(80%);
+}
+
+.aiModal {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+.aiModal .overlay {
+  position: fixed;
+  bottom: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+}
+.aiModal .modal {
+  background: #F4F4F4;
+  width: 700px;
+  height: 560px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+.aiModal .modal .title {
+  color: #3E342D;
+  font-size: 50px;
+}
+.aiModal .modal .close {
+  color: #3E342D;
+  font-size: 35px;
+}
+.aiModal .modal .close:hover {
+  transition: 0.2s;
+  cursor: pointer;
+  filter: opacity(80%);
 }/*# sourceMappingURL=Mail.css.map */
