--- a/frontend/src/styles/Home.css
+++ b/frontend/src/styles/Home.css
@@ -16,12 +16,13 @@
 }
 
 .screenshots {
-  margin-top: 50px;
+  margin-top: 70px;
 }
 .screenshots img {
-  width: 500px;
+  width: 550px;
   border: solid 10px #3E342D;
-  border-radius: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .modalHolder {
