--- a/frontend/src/styles/Home.scss
+++ b/frontend/src/styles/Home.scss
@@ -18,11 +18,12 @@
     }
 }
 .screenshots {
-    margin-top: 50px;
+    margin-top: 70px;
     img {
-        width: 500px;
+        width: 550px;
         border: solid 10px $solid-brown;
-        border-radius: 20px;
+        border-radius: 10px;
+        box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
     }
 }
 
