--- a/frontend/src/styles/Mail.css
+++ b/frontend/src/styles/Mail.css
@@ -266,6 +266,16 @@
   align-items: center;
   height: 100vh;
 }
+.aiModal .spinnerAlert {
+  position: absolute;
+  font-size: 40px;
+  top: 100px;
+}
+.aiModal .spinner {
+  display: flex;
+  justify-content: center;
+  margin-top: 260px;
+}
 .aiModal .overlay {
   position: fixed;
   bottom: 0;
@@ -277,20 +287,46 @@
 .aiModal .modal {
   background: #F4F4F4;
   width: 700px;
-  height: 560px;
+  height: 570px;
   padding-left: 20px;
   padding-right: 20px;
+  color: #3E342D;
 }
 .aiModal .modal .title {
-  color: #3E342D;
   font-size: 50px;
+  padding: 15px;
 }
 .aiModal .modal .close {
-  color: #3E342D;
   font-size: 35px;
 }
 .aiModal .modal .close:hover {
   transition: 0.2s;
   cursor: pointer;
   filter: opacity(80%);
+}
+.aiModal .modal .description {
+  font-size: 20px;
+  padding-left: 15px;
+}
+.aiModal .modal .reminder {
+  color: #226BAF;
+  font-size: 14px;
+  padding-left: 15px;
+}
+.aiModal .modal .exampleTitle {
+  font-size: 20px;
+  padding-left: 15px;
+}
+.aiModal .modal .example {
+  font-size: 20px;
+  padding-left: 15px;
+}
+.aiModal .modal textarea {
+  background: #BDBDBD;
+  padding: 8px;
+  padding-left: 10px;
+  width: 630px;
+  height: 120px;
+  resize: none;
+  font-size: 20px;
 }/*# sourceMappingURL=Mail.css.map */
